<resources>
    <string name="app_name">WiSE Brewer</string>
    <string name="devices">Bluetooth Devices</string>

    <string name="bluetooth_permission_title">Bluetooth permission</string>
    <string name="bluetooth_permission_grant">Bluetooth permission is required by this App. Please grant in next dialog.</string>
    <string name="bluetooth_permission_denied">Bluetooth permission was permanently denied. You have to enable permission \"%s\" in App settings.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_quote">\'Everytime I Brew...\nBrew for YOU...\'</string>
    <string name="pause_sec">Pause (sec)</string>
    <string name="speed_ml_s">Speed (mL/s)</string>
    <string name="water_ml">Water (mL)</string>
    <string name="not_connected">Not Connected</string>
    <string name="amount_of_water">Amount Of Water</string>
    <string name="temperature">Temperature</string>
    <string name="blooming">Blooming</string>
    <string name="next">Next</string>
    <string name="edit_profile_name">Edit Profile Name</string>
    <string name="save">Save</string>
    <string name="default_txt">Default</string>
    <string name="selected_profile">Selected Profile</string>
    <string name="ready">READY</string>
</resources>
