<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".HomeFragment2">

    <LinearLayout
        android:id="@+id/ll_bluetooth_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_bluetooth_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDarkBlue"
            android:padding="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:text="@string/not_connected"
            app:drawableLeftCompat="@drawable/bluetooth" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_selected_profile_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/block_bg_with_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/profile_selected_pic"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/profile_selected_pic"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_profile"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_selected_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_txt"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:background="@drawable/block_white_bg_with_border"
                android:layout_gravity="center"
                android:padding="2dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_selected_profile_arrow_down"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:src="@drawable/arrow_down"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_info_block1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/block_bg_with_border"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:flow_horizontalGap="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_selected_profile_block">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Water"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="@dimen/labelTextSize"
                    android:textColor="@color/colorPrimary">
                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="7dp"
                        android:src="@drawable/water_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="250ml"
                        android:textStyle="bold"
                        android:textSize="@dimen/labelTextSize"
                        android:layout_gravity="center"
                        android:textColor="@color/colorText"></TextView>
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TDS"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="@dimen/labelTextSize"
                    android:textColor="@color/colorPrimary">
                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="7dp"
                        android:src="@drawable/tds_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="150ppm"
                        android:textStyle="bold"
                        android:textSize="@dimen/labelTextSize"
                        android:layout_gravity="center"
                        android:textColor="@color/colorText"></TextView>
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_info_block2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/block_bg_with_border"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_info_block1">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Temp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="@dimen/labelTextSize"
                    android:textColor="@color/colorPrimary">
                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="7dp"
                        android:src="@drawable/temperature_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="92c"
                        android:textStyle="bold"
                        android:textSize="@dimen/labelTextSize"
                        android:layout_gravity="center"
                        android:textColor="@color/colorText"></TextView>
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorGreen"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:src="@drawable/check_circle_white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ready"
                    android:textStyle="bold"
                    android:textSize="@dimen/labelTextSize"
                    android:textColor="@color/colorWhite"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_info_block2"
        android:background="@drawable/block_bg_with_border">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40sp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/check_circle_white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Let's brew"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>